# Customer-Support-RL-Agent

./: .gitignore  Dockerfile  README.md  agent.py  app.py  clean_dataset.json  clean_dataset.py  client.py  environment.py  grpo.py  grpo_dataset.json  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task_definitions.py  train_model.py
server/: app.py
support_model/: config.json  generation_config.json
